# type-hint-checker

./: .gitignore  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: command-line-tests-from-local.yml  command-line-tests-from-test-pypi.yml  commit_to_main.yml  on_commit_to_main.yml  on_pr_to_main.yml  on_push_to_feature_and_release.yml  pre-commit-test-from-local.yaml  python-app.yml  run-cli-tests-from-gh.yml  run-feature-tests.yml  run-release-tests.yml  unit-tests.yml
annotation_checker/: checkers.py  exceptions.py  file_parser.py  main.py
tests/: fixtures.py  test_command_line.py  test_functions.py  test_pre_commit.py  test_unit_tests.py
tests/cases/: annotated_self_class.py  comment_above.py  comment_below.py  comment_body.py  comment_header.py  comment_long_header.py  comment_long_header_2.py  different_comment.py  empty_class.py  many_comments.py  mixed_parameters.py  mixed_parameters_class.py  mixed_parameters_with_return.py  no_parameters.py  no_return.py  no_return_class.py  properly_annotated_class.py  static_function_class.py  string_type_hint.py
tests/configs/: change_repo.py  not-strict.yaml  strict.yaml
type_hint_checker/: checkers.py  main.py
