[metadata]
name = annotated
description = Check that all python files are annotated
version = 0.1.0
author = Paulina Pacyna
license = MIT
url = https://github.com/PaulinaPacyna

[options]
packages = find:

[options.entry_points]
console_scripts =
    annotation_checker = annotation_checker.main:main