[metadata]
name = annotation_checker
description = Check that all python files are annotated
version = 0.1.3
author = Paulina Pacyna
license = MIT
url = https://github.com/PaulinaPacyna
long_description_content_type = text/markdown

[options.packages.find]
exclude =
    tests

[options]
packages = find:

[options.entry_points]
console_scripts =
    annotation_checker = annotation_checker.main:main